--- a/src/components/app-header/app-header.scss
+++ b/src/components/app-header/app-header.scss
@@ -26,6 +26,10 @@
         font-weight: 700;
         line-height: 28px;
         &_red {
+            color: $black-color;
+            font-size: 24px;
+            font-weight: 700;
+            line-height: 28px;
             color: $red-color;
         }
     }
