--- a/src/components/pages/single-character-layout/single-character-layout.scss
+++ b/src/components/pages/single-character-layout/single-character-layout.scss
@@ -1,31 +1,31 @@
-@import '../../style/variables.scss';
+@import '../../../style/variables.scss';
 
-.singlecomic {
+.singlechar {
     margin-top: 50px;
     &_wrapper {
         display: grid;
         grid-template-columns: 293px 1fr;
         gap: 50px;
     }
-    &_img {
-        width: 100%;
-        height: 450px;
-    }
     &_block {
         display: flex;
         justify-content: space-between;
+    }
+    &_link { 
+        color: $black-color;
+        font-size: 18px;
+        font-weight: 700;
+        line-height: 21px;
+    }
+    &_img {
+        width: 100%;
+        height: 293px;
     }
     &_title {
         color: $black-color;
         font-size: 22px;
         font-weight: 700;
         line-height: 26px;
-    }
-    &_link {
-        color: $black-color;
-        font-size: 18px;
-        font-weight: 700;
-        line-height: 21px;
     }
     &_descr {
         color: $black-color;
@@ -34,13 +34,5 @@
         line-height: 21px;
         margin-top: 25px;
         width: 550px;
-    }
-    &_price {
-        color: $red-color;
-        font-size: 24px;
-        font-weight: 700;
-        line-height: 28px;
-        margin-top: 25px;
-
     }
 }
